[gd_scene load_steps=18 format=3 uid="uid://efwdnoirj55t"]

[ext_resource type="Script" path="res://scenes/items/torch.gd" id="1_kfmpc"]
[ext_resource type="Script" path="res://scenes/items/inventory/inv_items/Inv_Item.gd" id="2_2rurk"]
[ext_resource type="Texture2D" uid="uid://fdgdapdyi6kd" path="res://assets/textures/fading_circle.tres" id="3_fjoov"]
[ext_resource type="Texture2D" uid="uid://ct2r4652uchy1" path="res://assets/spritesheets/torch.png" id="3_o0q8v"]
[ext_resource type="Texture2D" uid="uid://dkj0nu7jyyh65" path="res://assets/spritesheets/torchhh1.png" id="4_y0hw2"]

[sub_resource type="Resource" id="Resource_q1v4w"]
script = ExtResource("2_2rurk")
name = "Torch"
texture = ExtResource("3_o0q8v")
tool = true
useScript = "res://scenes/items/torch.tscn"

[sub_resource type="CircleShape2D" id="CircleShape2D_ydk86"]
radius = 12.5399

[sub_resource type="AtlasTexture" id="AtlasTexture_yw4th"]
atlas = ExtResource("4_y0hw2")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsvkk"]
atlas = ExtResource("4_y0hw2")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovbln"]
atlas = ExtResource("4_y0hw2")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3cif"]
atlas = ExtResource("4_y0hw2")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_noiea"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw4th")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsvkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovbln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3cif")
}],
"loop": true,
"name": &"torchflame",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rbb71"]
size = Vector2(4.24241, 23.3258)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cwhm8"]
radius = 5.65654
height = 35.3682

[sub_resource type="Curve" id="Curve_iiqvf"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.175824), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_j77fq"]
curve = SubResource("Curve_iiqvf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_enyvg"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_j77fq")

[node name="Torch" type="RigidBody2D"]
collision_mask = 6
gravity_scale = 0.0
linear_damp = 1.0
script = ExtResource("1_kfmpc")
item = SubResource("Resource_q1v4w")

[node name="PointLight2D" type="PointLight2D" parent="."]
light_mask = 2
rotation = -0.774926
scale = Vector2(3, 3)
energy = 0.5
texture = ExtResource("3_fjoov")

[node name="Torch_Light_Area" type="Area2D" parent="PointLight2D"]
rotation = 0.774926
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointLight2D/Torch_Light_Area"]
shape = SubResource("CircleShape2D_ydk86")

[node name="Torch_light_shadow" type="PointLight2D" parent="."]
light_mask = 2
rotation = -0.774926
scale = Vector2(3, 3)
color = Color(1, 0.792157, 0.635294, 1)
energy = 0.5
shadow_enabled = true
shadow_filter = 1
texture = ExtResource("3_fjoov")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 3
position = Vector2(-0.0262772, 0.0262772)
rotation = 0.785398
scale = Vector2(0.578, 0.75)
sprite_frames = SubResource("SpriteFrames_noiea")
animation = &"torchflame"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.23925, 3.27607)
rotation = 0.774926
shape = SubResource("RectangleShape2D_rbb71")

[node name="Torch_Hitbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torch_Hitbox"]
position = Vector2(-1, 1)
rotation = 0.774926
shape = SubResource("CapsuleShape2D_cwhm8")

[node name="Torch_Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Shrink_Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1, 0.596078, 0.207843, 1)
position = Vector2(3.91928, -4.80862)
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_enyvg")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[connection signal="body_exited" from="PointLight2D/Torch_Light_Area" to="." method="_on_torch_light_area_body_exited"]
[connection signal="body_entered" from="Torch_Hitbox" to="." method="_on_torch_hitbox_body_entered"]
[connection signal="timeout" from="Torch_Timer" to="." method="_on_torch_timer_timeout"]
[connection signal="timeout" from="Shrink_Timer" to="." method="_on_shrink_timer_timeout"]
